--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -12,10 +12,28 @@
     }
 
     .wrapper {
-        padding: 0 6px;
-        margin-bottom: 2rem;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        @media (max-width: 768px) {
+            padding: 0 40px;
+        }
     }
-
+      
+    .card {
+        width: calc(25% - 40px);
+        margin-bottom: 50px;
+        @media (min-width: 769px) and (max-width: 1024px) {
+            width: calc(33.33% - 20px);
+        }
+        @media (min-width: 481px) and (max-width: 768px) {
+            width: calc(50% - 40px);
+        }
+        @media (max-width: 480px) {
+            width: 100%;
+        }
+    }
+      
     .card, 
     .card *,
     .card + * {
@@ -100,7 +118,7 @@
     }    
     
 
-    .card-body {
+    .card__body {
         position: relative;
         padding: 0;
 
@@ -192,7 +210,7 @@
     }
 
     &:hover { 
-        transform: scale(1.1); 
+        transform: scale(1.1);
 
         .overlay {
             opacity: .8;
