--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -86,7 +86,7 @@
     
             @media (max-width: 480px) {
                 height: 185px;
-                margin-bottom: 40px;
+                margin-bottom: 15px;
                 font-size: 1rem;
                 line-height: 115%;
             }
@@ -153,7 +153,7 @@
             font-size: 25px;
         }        
     }
-    button {
+    .movie-btn {
         display: block;
         width: 90%;
         height: 26px;
