--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .container {
     padding-top: 100px;
     color: #fff;
@@ -277,10 +279,21 @@
 
             .overlay {
                 opacity: 0.7;
+                z-index: 1;
+                &:before {
+                    content: "";
+                    width: 100%;
+                    height: 100vh;
+                    position: fixed;
+                    bottom: 0;
+                    left: 0;
+                    background-color: $overlayGray;
+                }
             }
             .info_panel {
                 display: block;
                 opacity: 1;
+                z-index: 2;
             }                
 
             h6.title {
@@ -294,6 +307,7 @@
                     display: block;
                     padding: 19px;
                     font-size: 1.5rem;
+                    z-index: 2;
                 }
             }
 
