--- a/src/components/Movies/movies.scss
+++ b/src/components/Movies/movies.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import '../../styles/variables.scss';
 
 .container {
     padding-top: 100px;
@@ -16,7 +16,7 @@
     .wrapper {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        align-items: flex-start;
         @media (max-width: 768px) {
             padding: 0 40px;
         }
@@ -31,6 +31,11 @@
     .card {
         width: calc(25% - 40px);
         margin-bottom: 50px;
+        margin-right: 50px;
+
+        &:nth-child(4n) {
+            margin-right: 0;
+        }
         @media (min-width: 769px) and (max-width: 1024px) {
             width: calc(33.33% - 20px);
         }
