--- a/src/containers/app.scss
+++ b/src/containers/app.scss
@@ -1,6 +1,6 @@
 #root {
   height: 100%;
-  min-height: 850px;  
+  min-height: 100vh;  
   background: linear-gradient(0deg, #1CB5E0 20%, #050b45 100%) no-repeat;
 }
 
