--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -40,7 +40,8 @@ header {
 
       a {
         display: inline-block;
-        margin: 0 0.2rem 0;
+        margin: 0 4px 0;
+        position: relative;
 
         &.nav-fav,
         &.nav-watchLater {
